# Eggy

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Eggy  Eggy.h  Makefile  README.md  cmake_install.cmake  glad.c  imgui.ini  main.c  main.cpp  setup.sh
.cache/clangd/index/: json.hpp.03C4874EC8541072.idx  loader_example.cc.6D6DB4C05C3C5B46.idx  stb_image.h.82C0510B699FF0BD.idx  stb_image_write.h.1EC081D445A7FF91.idx  tiny_gltf.cc.488436C352673DF0.idx  tiny_gltf.h.64729CC805A10EA3.idx
Materials/: standard.mat
Models/: char.fbx  sphere.fbx
Scenes/: main.scn
Shaders/display/: frag.glsl  vert.glsl
Shaders/screen/: frag.glsl  vert.glsl
Shaders/standard/: frag.glsl  vert.glsl
files/: Camera.hpp  CameraMovement.hpp  Display.hpp  FileLoader.hpp  Material.hpp  MaterialProperty.hpp  Mesh.hpp  Model.hpp  Node.hpp  NodePreview.hpp  Scene.hpp  ScenePreview.hpp  Shader.hpp  ShaderCollection.hpp  StringHelper.hpp  Texture.hpp  UI.hpp  Window.hpp  components.c  display.c  editor-ui.c  editor-ui.h  material.c  mesh.c  node.c  renderer.h  scene.c  scene.h  shader.c  ui.c  ui.h  window.c  window.h
libraries/assimp/: CMakeLists.txt
libraries/glad/: glad.h
libraries/imgui/: Makefile  cmake_install.cmake
libraries/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
